--- a/index.html
+++ b/index.html
@@ -3,21 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morse Code Decoder</title>
+    <title>Morse Code Translator</title>
     <link rel="stylesheet" href="style.css">
-   
 </head>
-
 <body>
- <div class = "topnav">
-	<a class="active" href="#morse-text">Morse to Text</a>
-	<a href="#text-morse">Text to Morse </a>
+    <div class="topnav">
+        <a class="active" href="#morse-text" onclick="showSection('morse-text')">Morse to Text</a>
+        <a href="#text-morse" onclick="showSection('text-morse')">Text to Morse</a>
     </div>
     <div class="container">
-        <h1>Morse Code Decoder</h1>
-        <input type="text" id="morseInput" placeholder="Enter Morse code here...">
-        <button onclick="decodeMorse()">Decode</button>
-        <p>Decoded Text: <span id="decodedText"></span></p>
+        <div id="morse-text" class="section">
+            <h1>Morse Code to Text</h1>
+            <input type="text" id="morseInput" placeholder="Enter Morse code here...">
+            <button onclick="decodeMorse()">Decode</button>
+            <p>Decoded Text: <span id="decodedText"></span></p>
+        </div>
+        <div id="text-morse" class="section" style="display: none;">
+            <h1>Text to Morse Code</h1>
+            <input type="text" id="textInput" placeholder="Enter text here...">
+            <button onclick="encodeToMorse()">Encode</button>
+            <p>Encoded Morse: <span id="encodedText"></span></p>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
